--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.ghoscher.button">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- You might need to enable this for GPU profiling -->
+    <!--<uses-permission android:name="android.permission.INTERNET" />-->
 
     <application
         android:allowBackup="true"
